test/expected/explain_fkr_v.out
explain void f(x)
               ^
16: error: type specifier required in C++
